--- a/index.html
+++ b/index.html
@@ -1,21 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Linear Regression ML Pipeline</title>
-        <style>
-            canvas {
-                border: 1px solid black;
-            }
-        </style>
+        <title>BROW-ML</title>
     </head>
     <body>
-        <h1>Simple Machine Learning Pipeline (Linear Regression)</h1>
-        <p>Open the console to see the training proess.</p>
-        <canvas id="chart" width="600" height="400"></canvas>
-        <input  id="xInput" type="number" placeholder="Enter X value">
-        <button id="predictBtn">Predict</button>
-        <p id="output"></p>
-
-        <script type="module" src="./src/main.js"></script>
     </body>
 </html>
